Info page Table added and Images in HTML learned

--- a/Lessons/1. HTML Basics 🏗️/Movie Review/Info/info.html
+++ b/Lessons/1. HTML Basics 🏗️/Movie Review/Info/info.html
@@ -4,10 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Information</title>
+    <link rel="stylesheet" href="table.css">
 </head>
 <body>
     <h1>Informations</h1>
 
     <a href="../index.html">Home</a>
+
+    <table>
+        <caption>Popular actor or actress in 2025</caption>
+
+        <thead>
+            <tr>
+                <th>Person</th>
+                <th>Most Popular in</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <th>Asif Ali</th>
+                <td>Salt N' Pepper</td>
+                <td>39</td>
+            </tr>
+
+            <tr>
+                <th>Anaswara Rajan</th>
+                <td>Thanneer Mathan Dinangal</td>
+                <td>22</td>
+            </tr>
+
+            <tr>
+                <th>Mathew Thomas</th>
+                <td>
+                    <ul>
+                        <li>Thanneer Mathan Dinangal</li>
+                        <li>Kumbalangi Nights</li>
+                        <li>Anjaam Pathiraa</li>
+                    </ul>
+                </td>
+                <td>22</td>
+            </tr>
+
+            <tr>
+                <th>Mahima Nambiar</th>
+                <td>RDX</td>
+                <td>30</td>
+            </tr>
+
+            <tr>
+                <th>Pradeep Ranganathan</th>
+                <td>Love Today</td>
+                <td>31</td>
+            </tr>
+
+            <tr>
+                <th>Kayadu Lohar</th>
+                <td>Pathonpatham Noottandu</td>
+                <td>24</td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <th colspan="2">Average Age</th>
+                <th>28</th>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
