--- a/Lessons/1. HTML Basics 🏗️/Movie Review/index.html
+++ b/Lessons/1. HTML Basics 🏗️/Movie Review/index.html
@@ -67,6 +67,8 @@
                         imdb
                     </a>
                 </div>
+
+                <a href="Info/info.html">More Info</a>
             </div>
             
             <div class="item">
@@ -96,6 +98,8 @@
                         imdb
                     </a>
                 </div>
+
+                <a href="Info/info.html">More Info</a>
             </div>
 
             <div class="feedback">
